[package]
name = "vulkano-glyph"
description = "Text rendering with vulkano."
version = "0.2.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/vulkano-glyph"
documentation = "https://docs.rs/vulkano-glyph"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
vulkano = "0.11.1"
vulkano-shaders = "0.11.1"
log = "0.4.6"

[dependencies.rusttype]
version = "0.7.4"
features = ["gpu_cache"]

[dev-dependencies]
vulkano-win = "0.11.1"
winit = "0.18.1"
env_logger = "0.6.0"
